waxaan ku sameyay tailwind css and html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- section two-->
  <div class="sm:flex sm: justify-between">
     <div class="sm:px-20 sm:py5 sm:sm:mt-[60px] ml-5">
-        <h1 class="text-[45px]">Exellent services
+        <h1 class="text-[45px] gb-">Exellent services
             For IT success</h1>
        <div class="flex mt-[40px]">
         <i class="fa-solid fa-circle-check text-yellow-400  mt-[5px] "></i>
